@@ -11,6 +11,9 @@ IMPROVEMENTS
 * ``failing`` now correctly calls ``repository.get_failing`` and will this
   track all seen failures rather than just the latest observed failures.
 
+* New argument type ``StringArgument`` for use when a supplied argument is just
+  a string, rather than a typed argument.
+
 * New subcommand 'failing' added.
 
 * New subcommand ``run`` added which reads a .testr.conf file to figure out how
